--- a/index.html
+++ b/index.html
@@ -11,16 +11,28 @@
 
 <body>
     <div class="centre">
-        <form class="form-group col-6">
-            <label for="element-list">Ajouter a la liste :</label>
-            <input class="form-control" type="text" id="element-list" name="element-list">
-            <button id="submit" class="btn btn-primary mt-3">Ajouter a la liste</button>
+        <form id="submit" class="form-group col-6">
+            <h1>Ajouter à la liste</h1>
+            <label for="nom">Nom :</label>
+            <input class="form-control" type="text" id="nom" name="nom">
+            <label for="prenom">Prénom :</label>
+            <input class="form-control" type="text" id="prenom" name="prenom">
+            <button class="btn btn-primary mt-3">Ajouter a la liste</button>
         </form>
     </div>
     <div id="alert"></div>
-    <ol id="list">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Nom</th>
+                <th>Prénom</th>
+            </tr>
+        </thead>
+        <tbody id="listing">
 
-    </ol>
+        </tbody>
+    </table>
 </body>
 <script src="script.js"></script>
 <script src="vendor/components/jquery/jquery.min.js"></script>
